# terrain_tools

./: .gitignore  LICENSE  README.md
Generator/: CMakeLists.txt  Types.h  main.cpp  terrain3dviewer.cpp  terrain3dviewer.h  vert.glsl
Generator/FileConverter/: fileconverter.cpp  fileconverter.h  huffmancompressor.cpp  huffmancompressor.h
Generator/Generator/: Curve.h  heightmap.cpp  heightmap.h  perlinnoise.cpp  perlinnoise.h  terrain.cpp  terrain.h  terraingenerator.cpp  terraingenerator.h
Generator/ImageGenerator/: imagegenerator.cpp  imagegenerator.h
Generator/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
GeneratorUI/: CMakeLists.txt  Types.h  main.cpp
GeneratorUI/Generator/: heightmap.h  perlinnoise.cpp  perlinnoise.h  terrain.cpp  terrain.h  terraingenerator.cpp  terraingenerator.h
GeneratorUI/ImageGenerator/: imagegenerator.cpp  imagegenerator.h
GeneratorUI/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
GraphicsEngine/: .clang-format  .clangd  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  main.cpp
GraphicsEngine/OS/Include/: DynLib.h  FileSystem.h  Hardware.h  Memory.h  Processes.h  Threads.h  Window.h
GraphicsEngine/Utils/: Types.h
GraphicsEngine/engine_core/: CMakeLists.txt
GraphicsEngine/engine_core/include/: platform.hpp  types.hpp
GraphicsEngine/engine_core/include/context/: context.hpp  event_queue.hpp  event_system.hpp  monitor.hpp  window.hpp
GraphicsEngine/engine_core/include/math/: geometry.hpp  matrix.hpp  utils.hpp  vector.hpp
GraphicsEngine/engine_core/include/memory/: memory.hpp  object_pool.hpp  resource.hpp
GraphicsEngine/engine_core/src/context/: event_queue.cpp  event_system.cpp  monitor.cpp  window.cpp
GraphicsEngine/engine_core/src/memory/: memory.cpp  object_pool.cpp
Plans/: FirstMilestone.md  README.md  SecondMilestone.md  ThirdMilestone.md
Plans/GraphicsEngine/: EngineArchitecture.md  GameInitialization101.md
